--- a/letter.html
+++ b/letter.html
@@ -20,7 +20,7 @@
             <p>Happy New Year นะ!</p>
             <p>ขอบคุณนะที่ผ่านเข้ามาทำให้ปีนี้มีสีสันขึ้นเยอะเลย ถึงเค้าจะชอบกวนประสาท ด่ากันบ้าง (ส่วนใหญ่เธอนั่นแหละที่ด่าก่อน 555) แต่เอาจริงๆ ป่ะ เค้าโคตรรู้สึกดีเลยเวลาที่ได้คุยกับเธอ</p>
             <p>เธอเป็นคนเดียวเลยที่ทำให้เค้าขำได้แบบไม่ต้องเกร็ง เป็นความสบายใจที่หาจากที่ไหนไม่ได้แล้ว</p>
-            <p>ปี 2026 นี้ ก็อยู่ให้ด่า เอ้ย! อยู่คุยกันแบบนี้ไปนานๆ นะ อย่าเพิ่งรีบหายไปไหนล่ะ อยากมีเธอในชีวิตแบบนี้ต่อไปเรื่อยๆ เลย</p>
+            <p>ปี 2026 นี้ ก็อยู่ให้ด่า เอ้ย! อยู่คุยกันแบบนี้ไปนานๆ นะ อย่าพึ่งรีบหายไปไหนละ อยากมีเธอในชีวิตแบบนี้ต่อไปเรื่อยๆ เลย</p>
             <p style="text-align: center; margin-top: 30px; color: #ff4d79; font-size: 1.2rem; font-weight: 400;">รักนะ จู๊บๆ ♡</p>
         </div>
         
